[package]
name = "bond"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_22"] }
kube = { version = "0.69.0", features = ["derive", "runtime"] }
kube-runtime = { version = "0.69.0", default-features = false }
log = "0.4.14"
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.78"
thiserror = "1.0.30"
tokio = { version = "1.16.1", default-features = false, features = ["macros", "rt-multi-thread"] }
