[package]
name = "bond"
version = "0.1.1"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_23"] }
kube = { version = "0.72.0", features = ["derive", "runtime"] }
kube-runtime = { version = "0.72.0", default-features = false }
log = "0.4.17"
schemars = "0.8.8"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", default-features = false, features = ["macros", "rt-multi-thread"] }
